ansible/files/manifests/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
          limits:
            cpu: 250m
            memory: 750Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-pv
        - mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
          name: grafana-ini
        - mountPath: /etc/grafana/provisioning/datasources/datasource.yml
          subPath: datasource.yml
          name: grafana-datasource
        - mountPath: /etc/grafana/provisioning/dashboards/dashboard.yml
          subPath: dashboard.yml
          name: grafana-dashboard
        - mountPath: /var/lib/grafana/dashboards/OEE.json
          subPath: OEE.json
          name: grafana-dashboard-content
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-ini
          configMap:
            name: grafana-config
            items:
              - key: grafana.ini
                path: grafana.ini
        - name: grafana-datasource
          configMap:
            name: grafana-datasource
            items:
              - key: datasource.yml
                path: datasource.yml
        - name: grafana-dashboard
          configMap:
            name: grafana-dashboard
            items:
              - key: dashboard.yml
                path: dashboard.yml
        - name: grafana-dashboard-content
          configMap:
            name: grafana-dashboard-content
            items:
              - key: OEE.json
                path: OEE.json
      serviceAccount: grafana
      serviceAccountName: grafana
---
