ansible/files/manifests/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: dgw
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
      nodePort: 32005
  selector:
    app: grafana
  sessionAffinity: None
  type: NodePort
